# shiny-computing-machine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bochsrc.txt
kernel/: CMakeLists.txt  kmain.c  kmain.cpp
kernel/crt/: CMakeLists.txt  limits.h  stddef.h  stdint.h  stdlib.c  stdlib.h  string.c  string.h
kernel/debug_log/: CMakeLists.txt  logOptions.cpp  logOptions.h  logToDisplay.cpp  logToDisplay.h
kernel/freestanding/: CMakeLists.txt  string.h
kernel/io/: CMakeLists.txt  framebuffer.c  framebuffer.cpp  framebuffer.h  io.asm  io.h  numericToChar.cpp  numericToChar.h  serial.cpp  serial.h  stdio.cpp  stdio.h
kernel/test/: CMakeLists.txt  string_test.cpp  string_test.h
loader/: CMakeLists.txt  crti.asm  crtn.asm  link.ld  loader.asm
